@@ -9,7 +9,7 @@
    <TITLE>libstdc++-v3 Installation Instructions</TITLE>
 <LINK REL="home" HREF="http://sourceware.cygnus.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: install.html,v 1.2 2000/06/19 22:20:15 bkoz Exp $ -->
+<!-- $Id: install.html,v 1.3 2000/06/20 23:14:37 bkoz Exp $ -->
 </HEAD>
 <BODY>
 
@@ -230,7 +230,7 @@ being built, and also enables -fhonor-std by default. This option is not availab
    <P>Now you have a few options:</P>
    <H3>[re]building <EM>everything</EM></H3>
    <P>If you're building GCC from scratch, you can do the usual
-      <TT> 'make boostrap' </TT> here, and libstdc++-v3 will be built
+      <TT> 'make bootstrap' </TT> here, and libstdc++-v3 will be built
       as its default C++ library.  The generated g++ will magically
       use the correct headers, link against the correct library
       binary, and in general using libstdc++-v3 will be a piece of
@@ -381,7 +381,7 @@ To rebuild just libstdc++, use:
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sourceware.cygnus.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@egcs.cygnus.com">Gabriel Dos Reis</A>.
-<BR> $Id: install.html,v 1.2 2000/06/19 22:20:15 bkoz Exp $
+<BR> $Id: install.html,v 1.3 2000/06/20 23:14:37 bkoz Exp $
 </EM></P>
 
 
